@@ -1,12 +1,5 @@
 package io.github.dead_i.bungeeweb.api;
 
-import com.google.gson.Gson;
-import io.github.dead_i.bungeeweb.APICommand;
-import io.github.dead_i.bungeeweb.BungeeWeb;
-import net.md_5.bungee.api.plugin.Plugin;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -14,18 +7,25 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.HashMap;
 
-public class GetUsers extends APICommand {
-    private Gson gson = new Gson();
+import org.jetbrains.annotations.NotNull;
 
-    public GetUsers() {
-        super("getusers", "settings.users.list");
+import io.github.dead_i.bungeeweb.APICommand;
+import io.github.dead_i.bungeeweb.BungeeWeb;
+import io.github.dead_i.bungeeweb.hikari.HikariDB;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+
+public class GetUsers extends APICommand {
+
+    public GetUsers(@NotNull BungeeWeb plugin) {
+        super(plugin, "getusers", "settings.users.list");
     }
 
     @Override
-    public void execute(Plugin plugin, HttpServletRequest req, HttpServletResponse res, String[] args) throws IOException, SQLException {
+    public void execute(HttpServletRequest req, HttpServletResponse res, String[] args) throws IOException, SQLException {
         HashMap<Integer, Object> out = new HashMap<>();
-        try (Connection conn = BungeeWeb.getDatabase()) {
-        	try (PreparedStatement stm = conn.prepareStatement(String.format("SELECT * FROM `%susers`", BungeeWeb.getConfig().getString("database.prefix")))) {
+        try (Connection conn = this.plugin.getDatabaseManager().connect()) {
+        	try (PreparedStatement stm = conn.prepareStatement("SELECT * FROM `%1$s`".formatted(HikariDB.TABLE_USERS))) {
         		ResultSet rs = stm.executeQuery();
         		while (rs.next()) {
                     HashMap<String, Object> users = new HashMap<>();
@@ -33,7 +33,7 @@ public class GetUsers extends APICommand {
                     users.put("group", rs.getInt("group"));
                     out.put(rs.getInt("id"), users);
                 }
-                res.getWriter().print(gson.toJson(out));
+                res.getWriter().print(GSON_PARSER.toJson(out));
         	}
         }
     }
